<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E5E5"
    android:gravity="top"
    android:orientation="vertical" 
    >

    <EditText
        android:id="@+id/etIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ipadd"
        android:visibility="visible" >
    </EditText>

    <EditText
        android:id="@+id/etPort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:inputType="numberDecimal"
        android:visibility="visible" >
    </EditText>

    <Button
        android:id="@+id/btP1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/R1"
        android:layout_weight="1"
        android:textSize="16sp" >
    </Button>

    <Button
        android:id="@+id/btP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/R2"
        android:textSize="16sp"
        android:visibility="gone" >
    </Button>

    <Button
        android:id="@+id/btP3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/R3"
        android:textSize="16sp"
        android:visibility="gone" >
    </Button>

    <Button
        android:id="@+id/btnC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Connect"
        android:layout_weight="1"
        android:visibility="gone" />

</LinearLayout>