<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/Temp"
            android:textColor="@color/Text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv1"
            android:layout_alignParentTop="true"
            android:text="@string/Temp"
            android:textColor="@color/Text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/tvLight"
            android:text="@string/Light"
            android:textColor="@color/Text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/Light"
            android:textColor="@color/Text"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start" />

        <Button
            android:id="@+id/btAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Auto" />

        <Button
            android:id="@+id/btPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pre" />

        <Button
            android:id="@+id/btOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Off" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btMan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/Manual" />

        <TabHost
            android:id="@+id/tabHost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btEqu1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Equipment1" />
                        
                        <Button
                            android:id="@+id/btEqu2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Equipment2" /> 
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btPro1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ProButPower" />  
                        <Button
                            android:id="@+id/btPro2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ProButMenu" /> 
                        <Button
                            android:id="@+id/btPro3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ProButUp" />
                        <Button
                            android:id="@+id/btPro4"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ProButDown" />          
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

</LinearLayout>